<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Following"
            type="com.example.dado.Play" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="169dp"
            android:layout_height="57dp"
            android:layout_marginTop="64dp"
            android:text="@string/dados"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="311dp"
            android:layout_height="288dp"
            android:layout_marginTop="116dp"
            android:contentDescription="@string/dado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/pngtreevector_dice_6185984" />


        <Button
            android:id="@+id/button"
            android:layout_width="144dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:text="@string/jugar"
            android:textSize="20sp"
            android:onClick="@{()->Following.following()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>