<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <data>

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">


        <Button
            android:id="@+id/button"
            android:layout_width="144sp"
            android:layout_height="0sp"
            android:layout_marginBottom="80sp"
            android:text="@string/lanzar"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="110sp"
            android:layout_height="57sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose"
            app:layout_constraintVertical_bias="1">

            <AutoCompleteTextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/dados"
                android:inputType="none"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/image"
            android:layout_width="0sp"
            android:layout_height="190sp"
            android:layout_marginStart="100sp"
            android:layout_marginTop="268sp"
            android:visibility="gone"
            android:layout_marginEnd="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice_1"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginTop="312sp"
            android:layout_marginEnd="24sp"
            android:text="@string/elegir"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="200sp"
            android:layout_height="190sp"
            android:layout_marginTop="268sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice_1"
            android:importantForAccessibility="no" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>